# datathon-mvm

./: .coverage  .dockerignore  .env.example  .gitignore  README.md  coverage.xml  docker-compose.yml  dvc.yaml  params.yaml  prefect.yaml  pyproject.toml  test-results.xml
.dvc/: config
.github/workflows/: ci.yml
configs/: model_config.yaml  monitoring_config.yaml
data/: .gitignore  golden_set.dvc  golden_set.json  golden_set_curto.json  processed.dvc  raw.dvc
data/chroma_db/03da4765-33e7-4e58-a089-331468c3a348/: index_metadata.pickle
data/chroma_db/0d9c2d21-2d9e-4471-886c-ea595829ddb0/: index_metadata.pickle
data/chroma_db/14d6d84a-c3ba-46e6-adc7-512da2a41496/: index_metadata.pickle
data/chroma_db/2a87786c-8b40-4021-8b8b-7b00624ad8f2/: index_metadata.pickle
data/chroma_db/2cf0a9fc-804f-46d6-97e3-38371331a2b3/: index_metadata.pickle
data/chroma_db/2e5532b1-86e0-4061-a30b-085095722680/: index_metadata.pickle
data/chroma_db/2fb21268-dadb-47a4-8f38-c17d75938b88/: index_metadata.pickle
data/chroma_db/4a3c5773-b34d-4ce1-b0b1-c70546c9dc1b/: index_metadata.pickle
data/chroma_db/4e296160-04b2-41be-b7d5-d9c6785ec459/: index_metadata.pickle
data/chroma_db/56c395bd-02cc-4cc0-8164-b2c92bd200b5/: index_metadata.pickle
data/chroma_db/57459e99-6272-4889-8eb8-a3eb08d08606/: index_metadata.pickle
data/chroma_db/57aeae38-6082-40c1-86b5-0176d36aa1c0/: index_metadata.pickle
data/chroma_db/5d68d25a-14cd-4ae0-8e27-7d49b6a27afd/: index_metadata.pickle
data/chroma_db/756751fc-3889-495e-83b8-4a79ad6412f7/: index_metadata.pickle
data/chroma_db/7c67956f-e68b-4d42-a3ca-7a7ad1f97e55/: index_metadata.pickle
data/chroma_db/7e4f3654-e02e-4199-b36d-95edc95bd43b/: index_metadata.pickle
data/chroma_db/8083e4b6-4dbd-4f18-bf51-46529c3fc0ea/: index_metadata.pickle
data/chroma_db/8d7af03c-fa68-4ca5-9b3e-fdaa0eb80ddf/: index_metadata.pickle
data/chroma_db/958437e3-cb02-4fd2-9736-2463ee594aef/: index_metadata.pickle
data/chroma_db/a1f8218b-79e0-43c9-a004-cf50c6765e89/: index_metadata.pickle
data/chroma_db/a64fd387-51f2-43e3-b93c-fa377c49b8c7/: index_metadata.pickle
data/chroma_db/a997f157-d19d-4ec6-90ee-04c211f2a508/: index_metadata.pickle
data/chroma_db/c1facad0-246c-42f3-95a6-b2fa009c8f2c/: index_metadata.pickle
data/chroma_db/c6bbea4b-bbe9-4b86-8035-4e1713963c25/: index_metadata.pickle
data/chroma_db/c90726d8-442a-4ab0-adfd-a758c383c91d/: index_metadata.pickle
data/chroma_db/cdf05fb4-51f0-4ebb-829b-1b23aedef39f/: index_metadata.pickle
data/chroma_db/ddacb876-ea98-4488-8e52-a9b246443b24/: index_metadata.pickle
data/models/: lstm_PETR4.SA_complex.pth  lstm_PETR4.SA_simple.pth  lstm_USIM5.SA_complex.pth  lstm_USIM5.SA_simple.pth  lstm_VALE3.SA_complex.pth  lstm_VALE3.SA_simple.pth
data/processed/: PETR4.SA.parquet  USIM5.SA.parquet  VALE3.SA.csv  VALE3.SA.parquet
data/raw/: PETR4.SA.csv  USIM5.SA.csv  VALE3.SA.csv
docs/: LGPD_PLAN.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md  system_card.py
evaluation/: ab_test_prompts.py  check_gates.py  drift_eval.py  llm_judge.py  ragas_eval.py
evaluation/results/: latest.json
notebooks/: eda.ipynb  explainability.ipynb
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/features/: data.py  feature_engineering.py
src/models/: LSTMParams.py  PredictParams.py  explainability.py  lstm.py  predict.py  train.py
src/models/Exceptions/: LSTMException.py
src/monitoring/: metrics.py
src/security/: guardrails.py
src/serving/: Dockerfile  app.py
tests/: conftest.py  test_agent.py  test_api.py  test_features.py  test_guardrails.py
