[project]
name = "datathon-grupo-mvm"
version = "1.0.0"
description = "Datathon Fase 05"
authors = [
    {name = "CURITIBA\\mmenezes",email = "mmenezes@alta-rt.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "yfinance>=1.1.0",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "fastapi>=0.128.8",
    "uvicorn>=0.40.0",
    "torch (>=2.10.0,<3.0.0)",
    "mlflow (>=3.9.0,<4.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pandera (>=0.31.1,<0.32.0)",
    "hypothesis (>=6.152.1,<7.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry]
packages = [{include = "stocks_predict", from = "src"}]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0"
]
