[project]
name = "datathon-grupo-mvm"
version = "1.0.0"
description = "Datathon Fase 05"
authors = [
    {name = "CURITIBA\\mmenezes", email = "mmenezes@alta-rt.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "yfinance>=0.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "torch (>=2.10.0,<3.0.0)",
    "mlflow>=2.0",
    "prometheus-client>=0.20",
    "pandera>=0.18",
    "httpx>=0.27",
    "pyopenssl>=24.0",
    "dvc>=3.0",
    "dvc-s3>=3.0",
    "langchain>=0.1",
    "langchain-openai>=0.1",
    "langchain-core>=0.1",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "ragas (>=0.4.3,<0.5.0)"
]

[tool.poetry]
packages = [{include = "stocks_predict", from = "src"}]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
torch = {version = ">=2.0,<3.0", source = "pytorch-cpu"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"
ruff = "*"
mypy = "*"
bandit = "*"
ipykernel = "*"
types-pyyaml = "^6.0.12.20260408"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"